<resources>
  <string name="app_name">Codebreaker</string>

  <string name="title_play">Play</string>
  <string name="title_scoreboard">Scoreboard</string>
  <string name="title_history">History</string>
  <string name="submit">Submit</string>

  <string name="match_results_format">%1$d / %2$d</string>
  <string name="settings_label">Settings</string>

  <string name="code_length_pref_key">code_length_preference</string>
  <string name="code_length_pref_title">Code length</string>

  <string name="pool_size_pref_key">pool_size_preference</string>
  <string name="pool_size_pref_title">Pool size</string>

  <string name="new_game_title">New game</string>
  <string name="code_length_label">Code length</string>
  <string name="pool_size_label">Pool size</string>
  <string name="date_completed_header">Date completed</string>
  <string name="unselected_attempts_header">Attempts</string>
  <string name="unselected_time_header">Time</string>
  <string name="selected_attempts_header"><u>Attempts</u></string>
  <string name="selected_time_header"><u>Time</u></string>

  <string name="date_time_combination_format">%1$s %2$s</string>
  <string name="solution_time_format">%1$02d:%2$02d:%3$02d</string>
  <string name="login_failure_message">Unable to sign in with the provided credentials.</string>
  <string name="sign_out_title">Sign out</string>

  <string-array name="emojis">
    <item>&#x1f600;</item> <!-- grinning face -->
    <item>&#x1f922;</item> <!-- nauseated face -->
    <item>&#x1f608;</item> <!-- smiling face with horns -->
    <item>&#x1f47D;</item> <!-- alien -->
    <item>&#x1f63c;</item> <!-- cat with wry smile -->
    <item>&#x1f418;</item> <!-- raccoon face -->
    <item>&#x1f984;</item> <!-- unicorn -->
    <item>&#x1f422;</item> <!-- turtle -->
    <item>&#x2615;</item> <!-- hot beverage -->
    <item>&#x1f37a;</item> <!-- beer mug -->
    <item>&#x1f37f;</item> <!-- popcorn -->
    <item>&#x1F32E;</item> <!-- taco -->
    <item>&#x1f5DD;</item> <!-- key -->
    <item>&#x1f339;</item> <!-- rose -->
    <item>&#x1F4B0;</item> <!-- money bag -->
    <item>&#x1F682;</item> <!-- bicycle -->
  </string-array>

  <string name="start_format">&#x2022; Started: %1$s %2$s</string>
  <string name="attempts_format">&#x2022; Attempts: %,d</string>
  <string name="elapsed_time_format">&#x2022; Elapsed time: %1$02d:%2$02d:%3$02d</string>

</resources>