<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/navigation_play">

  <fragment
    android:id="@+id/navigation_play"
    android:label="@string/title_play"
    android:name="edu.cnm.deepdive.codebreaker.controller.PlayFragment"
    tools:layout="@layout/fragment_play"/>

  <fragment
    android:id="@+id/navigation_scoreboard"
    android:label="@string/title_scoreboard"
    android:name="edu.cnm.deepdive.codebreaker.controller.ScoreboardFragment"
    tools:layout="@layout/fragment_scoreboard"/>

  <fragment
    android:id="@+id/navigation_history"
    android:label="@string/title_history"
    android:name="edu.cnm.deepdive.codebreaker.controller.HistoryFragment"
    tools:layout="@layout/fragment_history"/>
</navigation>