<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/half_control_spacing"
  tools:context=".controller.ScoreboardFragment">

  <TextView
    android:id="@+id/code_length_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_static_spacing"
    android:text="@string/code_length_label"
    android:textStyle="bold"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="@id/code_length"/>

  <TextView
    android:id="@+id/pool_size_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_static_spacing"
    android:textStyle="bold"
    android:text="@string/pool_size_label"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="@id/pool_size"/>

  <SeekBar
    android:id="@+id/code_length"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_control_spacing"
    android:max="@integer/code_length_pref_max"
    android:min="@integer/code_length_pref_min"
    android:progress="@integer/code_length_pref_default"
    app:layout_constraintTop_toBottomOf="@id/code_length_label"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/code_length_display"
    app:layout_constraintHorizontal_weight="4"/>

  <TextView
    android:id="@+id/code_length_display"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_static_spacing"
    app:layout_constraintTop_toTopOf="@id/code_length"
    app:layout_constraintBottom_toBottomOf="@id/code_length"
    app:layout_constraintStart_toEndOf="@id/code_length"
    app:layout_constraintEnd_toStartOf="@id/pool_size"
    app:layout_constraintHorizontal_weight="1"
    tools:text="3"/>

  <SeekBar
    android:id="@+id/pool_size"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_control_spacing"
    android:max="@integer/pool_size_pref_max"
    android:min="@integer/pool_size_pref_min"
    android:progress="@integer/pool_size_pref_default"
    app:layout_constraintTop_toBottomOf="@id/pool_size_label"
    app:layout_constraintEnd_toStartOf="@id/pool_size_display"
    app:layout_constraintStart_toEndOf="@id/code_length_display"
    app:layout_constraintHorizontal_weight="4"/>

  <TextView
    android:id="@+id/pool_size_display"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_static_spacing"
    app:layout_constraintTop_toTopOf="@id/pool_size"
    app:layout_constraintBottom_toBottomOf="@id/pool_size"
    app:layout_constraintStart_toEndOf="@id/pool_size"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_weight="1"
    tools:text="4"/>

  <LinearLayout
    android:id="@+id/header_container"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/half_control_spacing"
    android:paddingVertical="@dimen/half_static_spacing"
    android:paddingHorizontal="@dimen/half_control_spacing"
    app:layout_constraintTop_toBottomOf="@id/code_length"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="@dimen/half_static_spacing"
      android:layout_weight="3"
      android:textAlignment="viewStart"
      android:text="@string/date_completed_header"
      android:textStyle="bold"/>

    <TextView
      android:id="@+id/attempts_header"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="@dimen/half_static_spacing"
      android:layout_weight="2"
      android:textAlignment="center"
      android:textStyle="bold"
      android:text="@string/unselected_attempts_header"
      android:background="?android:selectableItemBackground"/>

    <TextView
      android:id="@+id/time_header"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="@dimen/half_static_spacing"
      android:layout_weight="2"
      android:textAlignment="viewEnd"
      android:textStyle="bold"
      android:text="@string/unselected_time_header"
      android:background="?android:selectableItemBackground"/>

  </LinearLayout>

  <ListView
    android:id="@+id/games"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/header_container"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:listitem="@layout/item_scoreboard"/>

</androidx.constraintlayout.widget.ConstraintLayout>
